--- a/index.html
+++ b/index.html
@@ -28,7 +28,99 @@
     </header>
 
     <main>
+        <section id="section-inverted-world" class="container">
+            <div class="section-texts">
+                <h1>O Mundo Invertido</h1>
+                <p role="text">
+                    O Mundo Invertido parece uma cópia do nosso mundo, mas com criaturas 
+                    horrendas, tempestades assustadoras, muita escuridão e entidades 
+                    malignas. Um reino controlado por Vecna, que tem planos de trazer 
+                    tudo isso ao nosso mundo.
+                </p>
+            </div>
+            <img 
+                class="invert-element" 
+                src="/assets/images/content/inverted-world.png" 
+                alt="Image ilustrativa do Mundo Invertido"
+            />
+        </section>
 
+
+        <section id="section-stranger-things-trailer" class="container">
+            <div class="video-frame" aria-hidden="true">
+                <iframe 
+                  width="460"
+                  height="215"  
+                  src="https://www.youtube.com/embed/SJ9EFhQ3ANQ?controls=0" 
+                  title="Youtube video player"
+                  frameborder="0"
+                  allow="accelerometer; autoplay; clipboard-write; encrypetd-media; gyroscope; picture; in-picture;"
+                  allowfullscreen
+                ></iframe>
+            </div>
+            <div class="section-texts">
+                <h2>Stranger things Vol. 4</h2>
+                <p role="text">
+                    Mais experientes, os heróis de Stranger Things também precisam
+                    enfrentar desafios maiores do que nunca e fazer decisões que vão 
+                    mudar suas vidas para sempre. Confira ao lado o trailer da quarta 
+                    temporada.
+                </p>
+                
+            </div>
+        </section>
+
+
+        <section id="section-stranger-things-gallery">
+            <div class="container section-text">
+                <h2>A Segunda série mais assistida na NetFlix</h2>
+                <ul class="gallery-container" role="gallery">
+                    <li class="gallery-image invert-element">
+                        <img src="/assets/images/content/serie-image-01.png" alt="Image de Vecna">
+                    </li>
+                    <li class="gallery-image invert-element">
+                        <img src="/assets/images/content/serie-image-02.png" alt="Imagem Ilustrativa do grupo">
+                    </li>
+                    <li class="gallery-image invert-element">
+                        <img src="/assets/images/content/serie-image-03.png" alt="Image Eleven Assustada">
+                    </li>
+
+                </ul>
+            </div>
+        </section>
+
+
+        <section id="section-form" class="container">
+            <h2>O Clube Dungeons & Dragons</h2>
+            <p>
+                Para deter Vecna, os Heróis de Stranger Things também precisam de 
+                você. O Clube de D&D mais famoso de Hawkings está comvagas abertas
+                para sua próxima aventura . Se você é destemido, gosta de desafios e 
+                não tem medo de rodar o D20, chegou a hora de se inscrever para fazerparte da nova campanha.
+            </p>
+            <div class="form-content">
+                <h3>Entre para o clube de D&D e tenha expêriencias de <span>outro mundo</span></h3>
+
+                <div class="form-container">
+                    <form>
+                        <label for="txtName">Nome Completo</label>
+                        <input type="text" name="name" id="txtName">
+
+                        <label for="txtEmail">E-mail</label>
+                        <input type="email" name="email" id="txtEmail">
+
+                        <label for="txtLevel">Level</label>
+                        <input type="text" name="level" id="txtLevel">
+
+                        <label for="txtCharacter">Personagem</label>
+                        <textarea name="character" cols="30" rows="10" id="txtCharacter"></textarea>
+
+                        <button type="button" id="btnSubscribe">Me inscrever</button>
+                    </form>
+                </div>
+            </div>
+
+        </section>
 
     </main>
 
