--- a/index.html
+++ b/index.html
@@ -5,9 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mundo Invertido</title>
+
+
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
-<body>
-    <header>
+<body class="light-theme" aria-label="O site ésta utilizando o tema light" role="body">
+    <header aria-label="Cabeçalho da páginas.">
 
         <audio id="music" autoplay>
            <source src="/assets/musics/normal-world.mpeg" />
