--- a/index.html
+++ b/index.html
@@ -121,6 +121,7 @@
 
                         <button type="button" id="btnSubscribe">Me inscrever</button>
                     </form>
+                    <script type="module" src="/assets/js/main.js"></script>
                 </div>
             </div>
 
@@ -135,25 +136,28 @@
         <img src="/assets/images/footer/logo.svg" alt="Logotipo Dio">
 
     </footer>
-    <script type="module" src="/assets/js/main.js"></script>
+    
     <script>
-        window.addEventListener('click', function(){
-            const audio = document.getElementById('music');
-            audio.play();
-            audio.volume = 0.2;
-        })
-        function switchTheme(){
-            document.body.classList.toogle('dark-theme');
-            document.body.classList.toogle('light-theme');
+        window.addEventListener('click', function() {
+        const audio = document.getElementById('music');
+        audio.play();
+        audio.volume = 0.2;
+      });
+
+      function switchTheme() {
+        document.body.classList.toggle('dark-theme');
+        document.body.classList.toggle('light-theme');
+
+        document.body.setAttribute('aria-label', 'Trocando o tema');
 
         const theme = document.body.classList[0];
         const music = theme === 'light-theme' ? 'normal-world.mpeg' : 'inverted-world.mpeg'
-        
+
         const audio = document.getElementById('music');
         audio.src = `assets/musics/${music}`;
         audio.play();
-        audio.volume = 0.2;   
-        }
+        audio.volume = 0.2;
+      }
     </script>
 </body>
 </html>
