--- a/index.html
+++ b/index.html
@@ -114,14 +114,14 @@
                         <input type="email" name="email" id="txtEmail">
 
                         <label for="txtLevel">Level</label>
-                        <input type="text" name="level" id="txtLevel">
+                        <input type="number" name="level" id="txtLevel">
 
                         <label for="txtCharacter">Personagem</label>
                         <textarea name="character" cols="30" rows="10" id="txtCharacter"></textarea>
 
                         <button type="button" id="btnSubscribe">Me inscrever</button>
                     </form>
-                    <script type="module" src="/assets/js/main.js"></script>
+                    
                 </div>
             </div>
 
@@ -159,5 +159,6 @@
         audio.volume = 0.2;
       }
     </script>
+    <script src="/assets/js/main.js" type="module"></script>
 </body>
 </html>
