--- a/index.html
+++ b/index.html
@@ -120,6 +120,10 @@
                         <textarea name="character" cols="30" rows="10" id="txtCharacter"></textarea>
 
                         <button type="button" id="btnSubscribe">Me inscrever</button>
+
+                        <ul id="subscriptions">
+
+                        </ul>
                     </form>
                     
                 </div>
